<resources>
    <string name="app_name">Megaquiz</string>
    <string name="welcome">Welcome to MegaQuiz</string>
    <string name="begin">Begin with Quiz here</string>
    <string name="start">Start</string>

    <string name="question">"?"</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>

    <string name="incorrect">False</string>
    <string name="correct">Correct</string>
    <string name="resume">Resume</string>

    <string name="congratulation">Congratulation!</string>
    <string name="time">Time:</string>
    <string name="usedTime">1:45</string>
    <string name="correctAnwsers">Correct Anwsers:</string>
    <string name="score">7/10</string>
    <string name="returnStart">Back to Start</string>


</resources>