...

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/aButton"
                android:layout_width="115dp"
                android:layout_height="74dp"
                android:contentDescription="@string/a"
                android:text="@string/a" />

            <Button
                android:id="@+id/bButton"
                android:layout_width="115dp"
                android:layout_height="74dp"
                android:text="@string/b" />
        </TableRow>

        <TableRow
...
